--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -25,7 +25,7 @@ and open the template in the editor.
             <hr>
             <div class='_1'>THE PAGE</div>
             <div class='_2'>WAS NOT FOUND</div>
-            <a class='btn' href='/index.jsp'>BACK TO HOMEPAGE</a>
+            <a class='btn' href='/home.jsp'>BACK TO HOMEPAGE</a>
         </div>
     </body>
 </html>
