--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -10,6 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/404.css">
+        <link rel="icon" type="image/png" href="img/Add.png">
     </head>
     <body>
  <div id="clouds">
